<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/colorButton"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dp10"
            android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/spvalue25"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/rules_of_game1"
            android:background="@color/colorInfo"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/spvalue25"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/rules_of_game2"

            />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:background="@drawable/educatioinal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/spvalue25"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/rules_of_game3"
            android:background="@color/colorInfo"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/spvalue25"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/rules_of_game4"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/spvalue25"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/rules_of_game5"
            android:background="@color/colorInfo"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/spvalue25"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/rules_of_game6"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/spvalue25"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/rules_of_game7"
            android:background="@color/colorInfo"

            />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/spvalue25"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/rules_of_game8"

                />


        </LinearLayout>
    </ScrollView>

</LinearLayout>